[package]
name = "sust"
version = "0.2.2"
edition = "2021"
license-file = "LICENSE.txt"
description = "A 2d rust rendering engine powered by sfml & egui that mainly renders shapes. This can be used to visualize algorithms on a grid based surface"
homepage = "https://github.com/Monkvy/sust"
repository = "https://github.com/Monkvy/sust"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sfml = "0.18.1" # Graphics engine
num = "0.4.0"   # Vector
egui-sfml = "0.1.1" # Gui
